# ALLCAPS

./: .gitignore  CHANGELOG.md  Makefile  README.md  config.example.yml  pyproject.toml
docs/: Capabilities.md  Usage.md
